k8s/registry/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry-ingressroute
  namespace: registry
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.timo-hermans.nl`)
      kind: Rule
      services:
        - name: registry
          port: 5000
          # serversTransport: registry-transport
  tls:
    domains:
      - main: registry.timo-hermans.nl
